[package]
name = "ipldstore"
version = "0.2.1"
description = "`ipldstore` is a library for working with IPLD content-addressed stores (CAS)."
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/microsandbox/monobase"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"

[lib]
name = "ipldstore"
path = "lib/lib.rs"

[dependencies]
aliasable = "0.1.3"
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.9"
futures = "0.3"
hex = "0.4"
pretty-error-debug = "0.3"
ipld-core = "0.4"
multihash = "0.19"
multihash-codetable = { version = "0.1", features = ["blake3"] }
serde = { version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
microsandbox-utils = { git = "https://github.com/microsandbox/microsandbox", branch = "main" }
tracing = "0.1"
typed-builder = "0.21"
getset = "0.1"

[dev-dependencies]
rand = "0.9"
